feat: [SSCA-1140]: Adding resource and service layers for Exemption workflow (#57114)
* feat: [SSCA-1140]: Adding Exemption service, service impl and resource impl
